# ImageTools

./: .dockerignore  .env  .env.example  .env.production.example  .gitignore  AI_CHAT_IMPLEMENTATION.md  AI_RESEARCH_FINDINGS.md  ANDROID_BUILD_GUIDE.md  BUILD.md  DOCKER_DEPLOYMENT.md  Dockerfile  ENV_CONFIG.md  External Features.md  IMPLEMENTATION_STRATEGY.md  ImageToolsAppSpec.md  MOBILE_APP_INTEGRATION.md  MOBILE_TESTING_GUIDE.md  QUICKSTART.md  README.md  README_STAGE2.md  RESEARCH_SUMMARY.md  TESTING_MULTI_USER.md  UPGRADING.md  USER_GUIDE.md  app.py  build-android.sh  build.sh  bump-version.js  dev-all.sh  docker-compose.yml  requirements.txt  run-all.sh  run-backend.sh  run-frontend.sh  version.json
android-app/: .gitignore  README.md  build.gradle  settings.gradle
backend/: .dockerignore  .env  .env.development  Dockerfile  requirements.txt
browser-addons/: FIX_NOTES.md  MANUAL_TEST.md  README.md  TESTING.md
deployment/: .env.example  docker-compose.yml
docs/: ANDROID_COMPLETE_IMPLEMENTATION.md  AUTHENTICATION_IMPLEMENTATION_PLAN.md  DEVELOPMENT.md  DOCKER_DEPLOYMENT.md  GPS_LIMITATIONS.md  ICONS.md  NGINX_AUTHELIA_DEPLOYMENT.md  README_STAGE1.md  REVIEW_GUIDE.md  STAGE1_IMPLEMENTATION_SUMMARY.md  UI_UPDATES.md  VERSION_MANAGEMENT.md
frontend/: .dockerignore  .env  .env.development  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
mcp-server/: README.md  pyproject.toml
mcp-server/src/mcp_server/: backend.py  backend_http.py  backend_local.py  http_app.py  server.py  stdio.py  tools.py
(+152 files in other folders)
