[project]
name = "imagetools-mcp-server"
version = "0.1.0"
description = "MCP server for ImageTools screenshots"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.12.0",
  "httpx>=0.26.0",
]

[project.scripts]
imagetools-mcp-stdio = "mcp_server.stdio:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]
